# portfolio-risk-api

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  NIGHT_WORK_SUMMARY.md  README.md  pyproject.toml
data/: sample_portfolio.csv  sample_prices.csv
docs/: CURRENT_HANDOFF.md  api_design.md  deployment_render.md  github_publication.md  limitations.md  manual_run_checklist.md  methodology.md  owner_walkthrough.md  project_status.md  public_push_checklist.md  public_readiness_review.md  risk_metric_examples.md  roadmap.md  stage2_backlog.md
scripts/: smoke_render.sh
src/portfolio_risk_api/: __init__.py  app.py  config.py  data_loader.py  localization.py  models.py  report.py  risk_metrics.py  scenarios.py  web.py
src/portfolio_risk_api/static/: styles.css
src/portfolio_risk_api/templates/: base.html  demo.html  error.html  landing.html  report.html
tests/: test_api.py  test_data_loader.py  test_risk_metrics.py
