[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-risk-api"
version = "0.2.0"
description = "Reusable FastAPI backend for portfolio risk calculations from CSV data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "numpy",
    "pydantic",
    "python-multipart",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "ruff",
    "black",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
portfolio_risk_api = ["templates/*.html", "static/*.css"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
